--- a/style.css
+++ b/style.css
@@ -1,31 +1,37 @@
 * {
-    background-color:antiquewhite;
+    background-color:gold;
     font-family: "Roboto Slab", serif;
-    list-style-type: none;
     color:black;
-    text-decoration: none;
     margin: 20px;
     padding: 0;
+    text-decoration: none;
+
+}
+#header{
+    font-size: 20px;
+    font-style: italic;
 }
 
 nav {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: end;
+    list-style-type: none;
+    font-size: 20px;
 } 
 
 .navbar_items ul li {
     display: inline-block;
     list-style: none;
-    margin: 10px 20px;
-    font: size 20px;
+    margin: 0px 0px;
+    font: size 10px;
     position: relative;
 }
 .navbar_items ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background: blue;
+    background: white;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -36,7 +42,7 @@ nav {
 }
 
 .hero{
-    background-image: url(./background.jpg);
+    background-image: url(./background.jpeg);
     height: 600px;
     width: 600px;
     background-repeat: repeat;
@@ -57,6 +63,10 @@ nav {
     left: 0;
     width: 100%;
     height: 100%;
+}
+.copywrite{
+    display:block
+    
 }
 
 
